code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_effort_selector.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Thinking effort ───────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  low                                                         │        
        │> high                                                Current │        
        │  max                                                         │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Esc to close                                                │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
