code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_fullscreen_selected.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ⏸ ask permissions on                                                          
  ────────────────────────────────────────────────────────────────────────────  
  > draft behind selector                                                       
  ─────────────────────────────────────────────── Automatic model · Multitask   
                                                                                
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
