code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_fullscreen_selector.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Mode ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  Agent        Complete the task                              │        
        │  Plan         Analyze and plan without editing               │        
        │> Debug        Investigate and fix a problem          Current │        
        │  Multitask    Delegate work and combine results              │        
        │  Ask          Answer questions without editing               │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Esc to close                                                │──────  
  > draf└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────── Automatic model · Debug
