code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_inline_selected.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                          Next mode: Multitask  
────────────────────────────────────────────────────────────────────────────────
> draft behind selector                                                         
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
