code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_inline_statusline_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                              下 一 条 模 式 ： 计 划   
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
  Automatic model · 计 划
