code/tui/src/app/snapshots/app__collaboration_modes_tests__collaboration_option_error_on_home.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                      Use /mode agent|plan|debug|multitask|ask  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ───────────────────────────────────────────────────── Automatic model · Ask   
                                                                                
  Enter send  ·  / commands
