code/tui/src/app/snapshots/app__collaboration_modes_tests__effort_boundary_inline_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                    推 理 强 度 已 是 最 高 档 （ high）   
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  test-model (high)                                                             
  ⏸ 请 求 权 限
