code/tui/src/app/snapshots/app__collaboration_modes_tests__effort_changed_fullscreen_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                           [— / —] [仪 表 盘 ]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ⏸ 手 动                                                                         
  ────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                             
  ────────────────────────────────────────────────────────── test-model (max)   
                                                                                
  Enter 发 送   ·  shift+tab 模 式   ·  shift+↓/↑ 思 考
