code/tui/src/app/snapshots/app__collaboration_modes_tests__effort_changed_inline_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  test-model (max)                                                              
  ⏸ 请 求 权 限
